--- a/src/localization/ru.json
+++ b/src/localization/ru.json
@@ -103,7 +103,10 @@
 		}
 	},
 	"sheet": {
-		"title": "Создайте запись",
+		"title": {
+      "create": "Создайте запись",
+      "update": "Обновите запись"
+    },
 		"description": "Создайте комплексную форму записи для отслеживания потребления инсулина, потребления пищи и уровня глюкозы для эффективного мониторинга здоровья.",
 		"form": {
 			"type": {
