--- a/src/localization/ru.json
+++ b/src/localization/ru.json
@@ -174,6 +174,7 @@
 			},
 			"home": "Главная",
 			"graphs": "Графики",
+			"statistics": "Статистика",
 			"support": "Поддержка",
 			"settings": "Настройик",
 			"logout": "Выйти"
@@ -183,7 +184,26 @@
 		"glucose": "ммол/Л"
 	},
 	"graphs": {
-		"title": "Graphs",
+		"title": "Графики",
 		"noResults": "Данные по данным фильтрам отсутствуют"
+	},
+	"statistics": {
+		"glucose": {
+			"title": "Глюкоза",
+			"description": "Средние показатели глюкозы за периоды времени."
+		},
+		"dailyInsulin": {
+			"title": "Daily Insulin",
+			"description": "Среднесуточное количество инсулина за определенный период времени."
+		},
+		"periods": {
+			"today": "Сегодня",
+			"yesterday": "Вчера",
+			"last3Days": "Последние 3 дня",
+			"lastWeek": "Последняя неделя",
+			"last2Weeks": "Последние две недели",
+			"lastMonth": "Последний месяц",
+			"last3Months": "Последние три месяца"
+		}
 	}
 }
