--- a/src/localization/ru.json
+++ b/src/localization/ru.json
@@ -1,57 +1,38 @@
 {
 	"toast": {
 		"delete": {
-			"online": {
-				"error": {
-					"title": "Ошибка при удалении записи",
-					"description": "Вы не можете удалять две записи одновременно."
-				},
-				"info": {
-					"title": "Информация о записи",
-					"description": "Поскольку сайт в настоящее время находится в оффлайн режиме, запись была удалена только локально, она будет удалена с серверов при подключении к Интернету."
-				}
+			"error": {
+				"title": "Ошибка при удалении записи",
+				"description": "Вы не можете удалять две записи одновременно."
 			},
-			"offline": {
-				"error": {
-					"title": "Ошибка при удалении записи",
-					"description": "При удалении оффлайн удаленных записей на сервера возникает ошибка: "
-				}
+			"info": {
+				"title": "Информация о записи",
+				"description": "Поскольку сайт в настоящее время находится в оффлайн режиме, запись была удалена только локально, она будет удалена с серверов при подключении к Интернету."
 			}
 		},
 		"update": {
-			"online": {
-				"error": {
-					"title": "Ошибка при обновлении записи"
-				},
-				"info": {
-					"title": "Информация о записи",
-					"description": "Поскольку сайт в настоящее время находится в оффлайн режиме, запись обновлялась только локально, она будет обновлена ​​на серверах, когда будет установлено подключение к Интернету."
-				}
+			"error": {
+				"title": "Ошибка при обновлении записи"
 			},
-			"offline": {
-				"error": {
-					"title": "Ошибка при обновлении записи",
-					"description": "При обновлении оффлайн обновленных записей на сервере возникла ошибка: "
-				}
+			"info": {
+				"title": "Информация о записи",
+				"description": "Поскольку сайт в настоящее время находится в оффлайн режиме, запись обновлялась только локально, она будет обновлена ​​на серверах, когда будет установлено подключение к Интернету."
 			}
 		},
 		"create": {
-			"online": {
-				"error": {
-					"title": "Ошибка при создании записи"
-				},
-				"info": {
-					"title": "Информация о записи",
-					"description": "Поскольку сайт в настоящее время находится в оффлайн режиме, запись была добавлена ​​только локально, она будет сохранена на серверах, когда будет установлено."
-				}
+			"error": {
+				"title": "Ошибка при создании записи"
 			},
-			"offline": {
-				"error": {
-					"title": "Ошибка при создании записи",
-					"description": "При сохранении записей из оффлайн режима на сервер возникала ошибка: "
-				}
+			"info": {
+				"title": "Информация о записи",
+				"description": "Поскольку сайт в настоящее время находится в оффлайн режиме, запись была добавлена ​​только локально, она будет сохранена на серверах, когда будет установлено."
 			}
-		}
+		},
+    "connection": {
+      "title": "Вы не в сети",
+      "description": "Пожалуйста, проверьте подключение и повторите попытку.",
+      "action": "Перезагрузить"
+    }
 	},
 	"table": {
 		"data": {
