--- a/src/lib/i18n/locales/ru/translation.json
+++ b/src/lib/i18n/locales/ru/translation.json
@@ -32,7 +32,16 @@
 			"title": "Вы не в сети",
 			"description": "Пожалуйста, проверьте подключение и повторите попытку.",
 			"action": "Перезагрузить"
-		}
+		},
+    "settings": {
+      "profile": {
+        "save": {
+          "error": {
+            "title": "Что-то пошло не так при сохранении настроек профиля"
+          }
+        }
+      }
+    }
 	},
 	"table": {
 		"data": {
@@ -59,9 +68,9 @@
 	},
 	"filters": {
 		"date": {
-			"placeholder": "Выбирите дату",
+			"placeholder": "Выберите дату",
 			"select": {
-				"placeholder": "Выбирите даты",
+				"placeholder": "Выберите даты",
 				"options": {
 					"today": "Сегодня",
 					"yesterday": "Вчера",
@@ -73,7 +82,7 @@
 			}
 		},
 		"type": {
-			"placeholder": "Выбирите тип",
+			"placeholder": "Выберите тип",
 			"options": {
 				"all": "Все",
 				"glucose": "Глюкоза",
@@ -98,10 +107,12 @@
 					"food": "Еда",
 					"activity": "Активность"
 				},
-				"placeholder": "Выбирите тип"
+				"placeholder": "Выберите тип"
 			},
 			"time": {
-				"label": "Время"
+				"label": "Время",
+        "hours": "Часы",
+        "minutes": "Минуты"
 			},
 			"relativeToFood": {
 				"label": "Относительно еды",
@@ -110,7 +121,7 @@
 					"after": "После",
 					"none": "------"
 				},
-				"placeholder": "Выбирите время относительно еды"
+				"placeholder": "Выберите время относительно еды"
 			},
 			"glucose": {
 				"label": "Глюкоза",
@@ -150,8 +161,8 @@
 		"dropdown": {
 			"languages": {
 				"label": "Язык",
-				"english": "Английский",
-				"russian": "Русский"
+				"en": "Английский",
+				"ru": "Русский"
 			},
 			"home": "Главная",
 			"graphs": "Графики",
@@ -174,7 +185,7 @@
 			"description": "Средние показатели глюкозы за периоды времени."
 		},
 		"dailyInsulin": {
-			"title": "Daily Insulin",
+			"title": "Дневной инсулин",
 			"description": "Среднесуточное количество инсулина за определенный период времени."
 		},
 		"periods": {
@@ -186,5 +197,26 @@
 			"lastMonth": "Последний месяц",
 			"last3Months": "Последние три месяца"
 		}
-	}
+	},
+  "settings": {
+    "title": "Настройки",
+    "description": "Управляйте настройками своей учетной записи.",
+    "profile": {
+      "title": "Профиль",
+      "description": "Это персональные настройки аккаунта.",
+      "inputs": {
+        "shortInsulin": {
+          "label": "Пользовательское название для короткого инсулина",
+          "description": "Использовать пользовательское название (бренд) для короткого инсулина, которое будет отображаться в таблице, графике и экспортируемых файлах."
+        },
+        "longInsulin": {
+          "label": "Пользовательское название для длинного инсулина",
+          "description": "Использовать пользовательское название (бренд) для длинного инсулина, которое будет отображаться в таблице, графике и экспортируемых файлах."
+        }
+      }
+    }
+  },
+  "common": {
+    "save": "Сохранить"
+  }
 }
